fixed numerous bugs. They included budget update issues on the planner page not updating in real time, the users name not showing up on the homeheader in specific cases, removing favorites not working properly, the scroll bar on the home page showing up when the map was present and thus elements behind the map were being scrolled, city not being set properly on localstorage if the user is exploring one city but chooses to learn more about a place in another city

--- a/src/components/styles/Miami.css
+++ b/src/components/styles/Miami.css
@@ -1348,7 +1348,7 @@ bottom: 0.25rem;
 .rec-container-item .item-quick-info {
 font-size: 0.8rem;
 font-weight: 600;
-bottom: 1.7rem;
+bottom: 1.4rem;
 }
 .item-quick-info svg {
 fill: green;
@@ -2396,7 +2396,7 @@ border-radius: 7px;
 }
 .instructions-showall {
 position: relative;
-bottom: 24.5rem;
+bottom: 23.5rem;
 left: 7rem;
 font-weight: 800;
 color: white;
@@ -2668,7 +2668,6 @@ color: black;
 @media screen and (max-width: 1619px) {
 #filtersList {
 top: 5rem;
-overflow-y: scroll;
 overflow-x: hidden;
 position: absolute;
 }
@@ -2699,8 +2698,8 @@ fill: gray;
 height: 110vh;
 }
 .instruction-toppick {
-position: relative;
-left: 5rem;
+    left: 4.2rem;
+    position: relative;
 }
 }
 
